--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <div class="main"></div>
         <div class="logo">
-        <img src="logo.png"
+        <img src="logo.png">
         </div>
         <ul>
             <li class="active "><a href="#">Home</a></li>
@@ -18,7 +18,7 @@
             <li><a href="#">Achievements</a></li>
         </ul>
         <div class="button">
-            <a href="#" class="btn">WATCH VIDEO</a>
+            <a href="https://youtu.be/5twveLmWhvI" class="btn">WATCH VIDEO</a>
         </div>
     </header>
 </body>
