--- a/webpage/index.html
+++ b/webpage/index.html
@@ -15,9 +15,9 @@
         <div id="section1"><h1> MESSI</h1>
             <ul>
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="#">Records</a></li>
-                <li><a href="#">Achievements</a></li>
+                <li><a href="ab.html">About</a></li>
+                <li><a href="rec.html">Records</a></li>
+                <li><a href="stats.html">Stats</a></li>
            </ul>
         
         
