--- a/ab.html
+++ b/ab.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
     <head>
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
@@ -8,7 +8,20 @@
     <body>
         <div class="container">
 
+            <div class="navbar">
+            <div class="logo">
+                <img src="webpage/logo.png">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="">About</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">About</a></li>
+                </ul>
+            </nav>
+            </div>   
+
         </div>
 
     </body>
-    
+    </html>
